release 1.5 (11-2010)
- OSGi headers added to Jersey OAuth modules
- Fixed issue 557
  http://java.net/jira/browse/JERSEY-557
  Spring integration: injection of Spring's ApplicationContext 
  should be possible using the @javax.ws.rs.core.Context annotation
- Fixed issue 596
  http://java.net/jira/browse/JERSEY-596
  When serializing parameters of the content-disposition header include a
  ' ' after the '; ' as this improves interoperability with services or clients
  that do not correctly parse content-disposition headers.
- Fixed issue 598
  http://java.net/jira/browse/JERSEY-598
  The Vary header is set if a call to Request.selectVariant is called.
- Fixed issue 600
  http://java.net/jira/browse/JERSEY-600
  Report errors if CDI-based Jersey injection targets for cannot be obtained.
- Fixed issue 597
  http://java.net/jira/browse/JERSEY-597
  The Errors class correctly cleans up the thread local state to stop
  class loader leaking when deploying Web applications.
- Fixed issue 522
  http://java.net/jira/browse/JERSEY-522
  The Request.selectVariant supports the quality of source "qs" parameter on
  media type variant.
- Fixed issue 206
  http://java.net/jira/browse/JERSEY-206
  WADL resource params must also be supported 
  for resource class fields or resource class bean properties
- Fixed issue 289
  http://java.net/jira/browse/JERSEY-289
  The filter init param "com.sun.jersey.config.feature.FilterContextPath" can
  be used to declare a filter context path.
  For example if the URL pattern of the Jersey configured filter is
  "/filterContext/*" and the param value is "/filterContext" then the base URI
  of the application is defined to be
  "http(s)://host:port/contextPath/filterContextPath/".
  Note that an init param is required because the Servlet 2.x API does not
  provide access to the URI pattern defined in the web.xml.
- Fixed issue 452
  http://java.net/jira/browse/JERSEY-452
  It is an error if a resource class is annotated with more than one